@@ -1,5 +1,9 @@
 2003-05-26  John Levon  <levon@movementarian.org>
 
+	* doc/oprofile.xml: update docs for --no-vmlinux
+
+2003-05-26  John Levon  <levon@movementarian.org>
+
 	* libop/op_interface_25.h:
 	* daemon/opd_image.c: handle tgid for future
 	compatibility, fix compile on older gccs
